unpackaged/main/default/objects/PhoneNumber__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>32</length>
    <type>Text</type>
</CustomField>